fix navbar bug to center align icons

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,15 +11,12 @@ html {
 }
 
 body {
-    background: url('/media/hero-image.png') no-repeat center center fixed;
+    background: url('/media/canva.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     font-family: 'Montserrat', sans-serif;
     margin: 0 auto;
     padding: 0;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
 }
 
 .container-pd {
